@@ -16,6 +16,7 @@ Tx_Extbase_Utility_Extension::registerPlugin($_EXTKEY, 'Pi1', 'Google Maps');
 
 // TCA configuration for tx_adgooglemaps_domain_model_map.
 t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_map', 'EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang_tca_csh_map.xml');
+t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_map', 'EXT:context_help/locallang_csh_ttcontent.xml');
 t3lib_extMgm::allowTableOnStandardPages('tx_adgooglemaps_domain_model_map');
 $TCA['tx_adgooglemaps_domain_model_map'] = array(
 	'ctrl' => array(
@@ -53,6 +54,7 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 
 // TCA configuration for tx_adgooglemaps_domain_model_category.
 t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_category', 'EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang_tca_csh_category.xml');
+t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_category', 'EXT:context_help/locallang_csh_ttcontent.xml');
 t3lib_extMgm::allowTableOnStandardPages('tx_adgooglemaps_domain_model_category');
 $TCA['tx_adgooglemaps_domain_model_category'] = array(
 	'ctrl' => array(
@@ -82,11 +84,14 @@ $TCA['tx_adgooglemaps_domain_model_category'] = array(
 		'languageField' => 'sys_language_uid',
 		'transOrigPointerField' => 'l18n_parent',
 		'transOrigDiffSourceField' => 'l18n_diffsource',
+		'treeParentField' => 'parent_category',
 	),
 );
 
 // TCA configuration for tx_adgooglemaps_domain_model_layer.
 t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_layer', 'EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang_tca_csh_layer.xml');
+t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_layer', 'EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang_tca_csh_layer.xml');
+t3lib_extMgm::addLLrefForTCAdescr('tx_adgooglemaps_domain_model_layer', 'EXT:context_help/locallang_csh_ttcontent.xml');
 t3lib_extMgm::allowTableOnStandardPages('tx_adgooglemaps_domain_model_layer');
 $TCA['tx_adgooglemaps_domain_model_layer'] = array(
 	'ctrl' => array(
@@ -133,5 +138,6 @@ $pluginSignature = strtolower(t3lib_div::underscoredToUpperCamelCase($_EXTKEY)) 
 $GLOBALS['TCA']['tt_content']['types']['list']['subtypes_excludelist'][$pluginSignature] = 'layout,select_key,pages,recursive';
 $GLOBALS['TCA']['tt_content']['types']['list']['subtypes_addlist'][$pluginSignature] = 'pi_flexform';
 t3lib_extMgm::addPiFlexFormValue($pluginSignature, 'FILE:EXT:' . $_EXTKEY . '/Configuration/FlexForms/flexform.xml');
+t3lib_extMgm::addLLrefForTCAdescr('tt_content.pi_flexform.' . $pluginSignature . '.list', 'EXT:ad_google_maps/Resources/Private/Language/locallang_flexform_csh.xml');
 
 ?>
